--- a/src/tile38_viewer/wwwroot/css/site.css
+++ b/src/tile38_viewer/wwwroot/css/site.css
@@ -45,6 +45,17 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+#map {
+  height: 80vh;
+  /* width: 85vw; */
+}
+
 .footer {
   position: absolute;
   bottom: 0;
