SignalR - first go

--- a/src/tile38_viewer/Views/Shared/_Layout.cshtml
+++ b/src/tile38_viewer/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.slim.js"></script>
 
+    <script src="~/lib/signalr/signalr.js"></script>
+
 </head>
 <body>
     <header>
